Fixed survey wrapping issue

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -33,6 +33,13 @@ h1, h2, h3 .briefing {
 	background-color: gray;
 }
 
+.minimal_border {
+	padding-right:4px;
+	padding-left:4px;
+	padding-top:4px;
+	padding-bottom:4px;
+}
+
 .jumbotron.game {
 	padding-right:8px;
 	padding-left:8px;
